[project]
name = "meteorite"
description = "A fast and simple web server for machine learning models"
readme = "README.md"
requires-python = ">=3.7"
license = {file= "LICENSE"}
keywords = ["model", "server", "api", "hosting"]
maintainers = [
    {name = "Utkarsh Goel", email = "utkarsh@deploif.ai"},
    {name = "Sean Chok", email = "seanchok@deploif.ai"}
]

[build-system]
requires = ["maturin>=1.1,<2"]
build-backend = "maturin"
